[package]
name = "price_oracle"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
sp-core            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19' }

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
scale-info         = { version = '2.1', default-features = false, features = ['derive'] }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
# External Dependencies
sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
sp-io              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
serde              = { version = '1.0.136', features = ['derive'], optional = true }
log = "0.4.16"
lite-json = { version = "0.1.3", default-features = false }
assets = { path="../assets", default-features = false, version = '4.0.0-dev'}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	# "serde",
	"sp-std/std",
	"assets/std",
	# "sp-io/std",
	"lite-json/std",
	"sp-runtime/std"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
