[package]
name = "pallet-loans-rpc-runtime-api"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[dependencies]
codec      = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
sp-api     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }

[features]
default = ['std']
std = [
	'codec/std', 
	'sp-api/std', 
	'sp-runtime/std',
]
